public class Produto extends Fornecedor {

	protected int codProduto;

	private String Descricao;

	private String Embalagem;

	private String EAN;

	private int GTIN;

	private double preco;

	private Fornecedor codForncedor;

	public int getProduto() {
		return 0;
	}

	public double getPreco() {
		return 0;
	}

	public void operation2() {

	}

}
